2002-11-19  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXScrlbr.c (TkpDisplayScrollbar): If the
	scrollbar width is set to 12 or less (but 12 is what you 
	should use) use the small metric scrollbar.

	(UpdateControlValues): Fix thinko in setting off AUTO_ADJUST for
	the place geometry manager.
	
2002-11-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: add macosx/*.tcl (buildTkConfig.tcl in
	particular) to the dist target.

2002-11-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkWindow.c (Tk_DestroyWindow,
	DeleteWindowsExitProc): Add TkHalfdeadWindow
	type and halfdeadWindowList to keep track
	of windows that were only partially deallocated
	before a call to exit. Finnish cleaning up
	these windows in DeleteWindowsExitProc.
	Keep track of cleanup status in Tk_DestroyWindow
	so that a window with a Destroy binding which
	calls exit will get fully destroyed.
	* tests/window.test: Add Tk_DestroyWindow tests
	for an assortment of half dead window cases.
	[Bug 630533]

2002-11-10  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: fixed erroneous
	removal of libtkstub before Wish was built.

2002-11-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/unixWm.test: Add short delay to test unixWm-51.7
	to account for raise/lower changes in TIP 107. This allows
	the test case to pass under Window Maker on Linux.

2002-11-07  Peter Spjuth  <peter.spjuth@space.se>

	* tests/place.test:
	* generic/tkPlace.c: place info did not return all settings,
	and didn't make sure the result was a proper list.
	Put '-in' first in result to be more consistent with how
	grid/pack info behaves. [Bug #635025][Bug #532022]

2002-11-07  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in: added macosx/README to dist target.
	* macosx/Wish.pbproj/project.pbxproj: fix to 'wish' script
	to allow it to work when not installed into '/'.

2002-11-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/configure: Regen.